<resources>
    <!-- Activity and app names -->
    <string name="app_name">BroCon Companion</string>
    <string name="title_activity_blank">blank</string>
    <string name="title_activity_committee">Committee</string>
    <string name="title_activity_timetable">Timetable</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Long Form string messages -->
    <string name="com_msg">Welcome to the Committee page, below this message is a list of the committee members, along with their position and their contact email.</string>
    <string name="abo_msg">Brocon is a convention organised by the Games Society and the Anime and Manga Society of the University of Limerick. We raise money for Piera House, A suicide prevention and help centre.(the number provided is for Pieta House Limerick)</string>
    <string name="abo_msg_2">The art presented when the app was opened and for the icon of the app was kindly created by Rachel Fleming for Brocon. She can be countacted via her E-mail for commissions here: RachelF006@yahoo.co.uk</string>
    <string name="abo_msg_3">The Programming and Design of the application were created for this app and for Brocon by Jason Fahy. Can be contacted here:</string>

    <!-- Toast Messages -->
    <string name="on_com">You are already on the Committee page</string>
    <string name="on_home">You are already on the Home page</string>
    <string name="on_timetable">You are already on the Timetable page</string>
    <string name="on_about">You are already on the About page</string>
    <string name="on_map">You are already on the Map page</string>

    <string name="pieta_numb">061-484444</string>

    <!-- Small String messages -->
    <string name="nav_header_email">public_relations@ulbrocon.com</string>
    <string name="nav_header_title">BroCon Companion App</string>

    <!-- Image Descriptions -->
    <string name="desc_header">BroCon Font style</string>

    <!-- Strings for timers -->
    <string name="timer_d">Days</string>
    <string name="timer_h">Hours</string>
    <string name="timer_m">Minutes</string>
    <string name="timer_s">Seconds</string>
    <string name="timer_w">Weeks</string>
    <string name="timer_0">0</string>

    <!-- Names for menu items -->
    <string name="menu_about">About</string>
    <string name="menu_blog">Blog</string>
    <string name="menu_committee">Committee</string>
    <string name="menu_facebook">Facebook</string>
    <string name="menu_guests">Guests</string>
    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_timetable">Timetable</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_floorplans">Floorplans</string>
</resources>
