<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_placeholder"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_placeholder"
            android:title="@string/menu_timetable"/>
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_placeholder"
            android:title="@string/menu_map"/>
        <item
            android:id="@+id/nav_guests"
            android:icon="@drawable/ic_placeholder"
            android:title="@string/menu_guests"/>
        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/ic_placeholder"
            android:title="@string/menu_blog"/>
    </group>

    <group
        android:id="@+id/menu_mid"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_committee"
            android:icon="@drawable/ic_placeholder"
            android:title="@string/menu_committee"/>
        <item
            android:id="@+id/nav_facebook"
            android:icon="@drawable/ic_facebook"
            android:title="@string/menu_facebook"/>
    </group>

    <group
        android:id="@+id/menu_about"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_placeholder"
            android:title="@string/menu_about"/>
    </group>

</menu>
