<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="@dimen/nav_header_height"
              android:background="@drawable/side_nav_bar"
              android:orientation="vertical"
              android:paddingBottom="0dp"
              android:paddingLeft="0dp"
              android:paddingRight="0dp"
              android:paddingTop="-10dp"
              android:theme="@style/ThemeOverlay.AppCompat.Dark"
              android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height_2"
        android:gravity="top"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:contentDescription="@string/desc_header"
            android:layout_width="210dp"
            android:layout_height="0dp"
            android:id="@+id/nav_header"
            android:src="@mipmap/ic_nav_header"
            android:layout_weight="0.77"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nav_header_title"
            android:id="@+id/textView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/nav_header_email"
            android:id="@+id/textView2"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorAccent">
    </LinearLayout>

</LinearLayout>
